--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "gatsby build && gh-pages -d public -b master",
+    "deploy": "gatsby build && gh-pages -d public",
     "prepare": "husky install",
     "lint-staged": "lint-staged"
   },
@@ -35,6 +35,7 @@
     "animejs": "^3.1.0",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^5.14.1",
+    "gatsby-plugin-github-pages": "^1.0.1",
     "gatsby-plugin-google-analytics": "^5.14.0",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
@@ -57,7 +58,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
-    "react-transition-group": "^4.3.0",
+    "react-transition-group": "^4.4.5",
     "scrollreveal": "^4.0.5",
     "styled-components": "^5.3.0"
   },
@@ -73,6 +74,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
     "gatsby-remark-code-titles": "^1.1.0",
+    "gh-pages": "^6.3.0",
     "husky": "^6.0.0",
     "lint-staged": "^10.1.2",
     "prettier": "^2.2.1"
