--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "kiran gorijala  <kgorija1@umbc.edu>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kiran1-1/kiran_gorijala1"
+    "url": "https://github.com/kiran1-1/kiran_gorijala"
   },
   "keywords": [
     "gatsby"
@@ -19,7 +19,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "gatsby build && gh-pages -d public",
+    "deploy":  "gatsby build --prefix-paths && gh-pages -d public",
     "prepare": "husky install",
     "lint-staged": "lint-staged"
   },
@@ -42,6 +42,7 @@
     "gatsby-plugin-netlify": "^5.1.1",
     "gatsby-plugin-offline": "^6.14.0",
     "gatsby-plugin-react-helmet": "^6.14.0",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-robots-txt": "^1.5.6",
     "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-plugin-sitemap": "^6.14.0",
